plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.4'
    id 'io.spring.dependency-management' version '1.1.3'
    id 'checkstyle'
    id 'jacoco'
    id 'name.remal.sonarlint' version '3.3.12'
    id "com.github.spotbugs" version "6.0.0-rc.2"
}

group = 'com.performity'
version = '0.0.1-SNAPSHOT'

java {
    //sourceCompatibility = '21'
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

checkstyle {
    toolVersion = "10.12.3"
    configFile = rootProject.file('../config/checkstyle/checkstyle.xml')
    ignoreFailures = false
    maxWarnings = 0
}

//compileJava.options.fork = true
//compileJava.options.forkOptions.executable = 'C:/Program Files/Java/jdk-17/bin/javac.exe'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    set('springCloudVersion', "2022.0.4")
}

dependencies {
    // TODO - extract common versions into variable
    // TODO - allow non-breaking changes in versions
    implementation 'org.springframework.boot:spring-boot-starter:3.1.+'
    implementation "org.springframework.boot:spring-boot-starter-log4j2:3.1.+"
    modules {
        module("org.springframework.boot:spring-boot-starter-logging") {
            replacedBy("org.springframework.boot:spring-boot-starter-log4j2", "Use Log4j2 instead of Logback")
        }
    }
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.+'
    implementation 'org.springframework.boot:spring-boot-starter-web:3.1.+'
    implementation 'org.springframework.boot:spring-boot-starter-parent:3.1.+'
    implementation 'org.springframework.boot:spring-boot-starter-validation:3.1.+'
    implementation 'org.springframework.kafka:spring-kafka:3.0.+'
    implementation 'org.springframework.cloud:spring-cloud-starter-consul-config:4.0.+'
    implementation 'org.springframework.cloud:spring-cloud-starter-consul-discovery:4.0.+'
    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:4.0.+'
    implementation 'org.keycloak:keycloak-admin-client:22.0.+'
    implementation 'org.jboss.resteasy:resteasy-client:6.2.+'
    //implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
    //implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'com.networknt:json-schema-validator:1.0.+'
    implementation 'org.springframework.boot:spring-boot-starter-actuator:3.1.+'
    implementation 'org.springframework.cloud:spring-cloud-starter-zipkin:2.2.+'
    implementation 'io.zipkin.reporter2:zipkin-reporter-brave:2.16.+'
    implementation 'io.micrometer:micrometer-tracing-bridge-brave:1.1.+'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.+'
    compileOnly 'org.projectlombok:lombok:1.18.+'
    developmentOnly 'org.springframework.boot:spring-boot-devtools:3.1.+'
    developmentOnly 'org.springframework.boot:spring-boot-docker-compose:3.1.+'
    runtimeOnly 'org.postgresql:postgresql:42.6.+'
    annotationProcessor 'org.projectlombok:lombok:1.18.+'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.+'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers:3.1.+'
    testImplementation 'org.springframework.kafka:spring-kafka-test:3.0.+'
    testImplementation 'org.testcontainers:junit-jupiter:1.19.+'
    testImplementation 'org.testcontainers:kafka:1.19.+'
    testImplementation 'org.testcontainers:postgresql:1.19.+'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
